<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_main">
        <item
            android:id="@+id/menu_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/menu_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_downloads" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/menu_theme"
            android:icon="@drawable/ic_palette"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

    <group android:id="@+id/group_info">
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>

    <group android:id="@+id/group_exit">
        <item
            android:id="@+id/menu_clear_exit"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_clear_exit" />
    </group>
</menu>