<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_back"
        android:icon="@drawable/ic_back"
        android:checkable="false"
        android:title="@string/nav_back" />
    <item
        android:id="@+id/nav_forward"
        android:icon="@drawable/ic_forward"
        android:checkable="false"
        android:title="@string/nav_forward" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:checkable="false"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_refresh"
        android:icon="@drawable/ic_refresh"
        android:checkable="false"
        android:title="@string/nav_refresh" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_menu"
        android:checkable="false"
        android:title="@string/nav_menu" />
</menu>